Debug sorting.js NOT Completed!

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -23,7 +23,7 @@
           </th>
         </tr>
       </thead>
-      <%= render @holidays, tbody: {class: "body-sort"}  %>
+      <%= render @holidays %>
     </table>
   <% else %>
     <p>
