--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -8,7 +8,7 @@
 
 <a style="margin: 2%"><%= left_out_holidays %> </a>
 
-<% if @dates_holidays.present? %>
+<%# if @dates_holidays.present? %>
   <table class="table table-bordered">
     <thead class="thead-light" align="center">
       <tr>
@@ -21,11 +21,12 @@
     </thead>
     <%= render @dates_holidays %>
   </table>
-<% else %>
-  <p>
+<%# else %>
+<!--   <p>
     <%= 'Empty list' %>
   </p>
-<% end %>
+ -->
+ <%# end %>
 <div class="digg_pagination">
   <%= will_paginate @dates_holidays, :container => false %>
 </div>
