--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -21,6 +21,9 @@
             <%= octicon 'arrow-up', class: 'text-success hide' %>
             <%= octicon 'arrow-down' , class: 'text-success hide' %>
           </th>
+          <th>
+            <%= 'Calculated' %>
+          </th>
         </tr>
       </thead>
       <%= render @holidays %>
