Create emails for 30 day

--- a/app/views/dates_holidays/_dates_holiday.html.erb
+++ b/app/views/dates_holidays/_dates_holiday.html.erb
@@ -1,6 +1,7 @@
 <tr>
- <td  align="center">
-    <%= "#{dates_holiday.day} / #{dates_holiday.name_month}" %>
+  <td  align="center">
+    <% day_month = "#{dates_holiday.day} / #{dates_holiday.name_month}" %>
+    <%= dates_holiday.year == 0 ? day_month : "#{day_month}/#{dates_holiday.year}"%>
   </td>
   <td>
     <%= dates_holiday.holiday.name %>
