--- a/app/views/emails/_email.html.erb
+++ b/app/views/emails/_email.html.erb
@@ -36,6 +36,10 @@
   <td align="center">
     <%= email.sent_date %>
   </td>
+  <td align="center">
+    <%= email.year %>
+  </td>
+
     <% if  email.checkit > 0 %>
   <td class="s_e_d">
       <% if email.sent_date.to_i.zero? %>
