--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -10,7 +10,7 @@
         { prompt: "Type select", id: "holiday_type_id" } %>
   </p>
   <p>
-    <%= 'Calculated:' %>
+    <%= 'variable:' %>
     <%= form.check_box :calc %>
   </p>
   <p> <%= form.submit %> </p>
