--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,26 +1,32 @@
 <%= form_with model: @email, local: true do |form| %>
-  <p>
-    <!-- Email Id: <%#= "#{@email.id}" %><br> -->
-    <a style="color: red; font-size: 20px"><%= "to:  #{@email.person.name}" %></a>
+  <div>
+    <a style="font-weight: bold; font-size: 14px;  margin: 1%">YEAR:</a>
+    <a  style="color: navy; font-weight: bold; font-size: 20px;"><%= @email.year %> </a>
+    <a style="margin: 1%"> id: </a> <a style="color: navy"><%= "#{@email.id}" %></a>
+
+    <br>
+
+    TO: <a style="color: red; font-size: 20px"><%= " #{@email.person.name}" %></a>
     <%#= form.collection_select :person_id, Person.all, :id, :name, prompt: 'Select person' %>
-    <a style="margin: 10%"><%= 'HOLIDAY: ' %>
-    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+  </div>
+    <a ><%= 'HOLIDAY: ' %>
+      <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
     </a>
-  </p>
-  <p>
-    <%= 'Description: '  %>
+    <div>
+    <%= 'Description: ' %>
     <%= form.text_field :name, size: 60 %>
-    <a style="margin: 5%">
+    </div>
+    <div>
       <%= 'Subject: '  %>
       <%= form.text_field :subject, size: 60 %>
-    </a>
+    </div>
     <% if @email.sent_date.present? %>
-      <a style="size: 100; margin: 10%">
-        <%= form.label :address %>
-        <%= form.text_field :address, size: 40 %>
-      </a>
+    <a style="size: 100; margin: 10%">
+      <%= form.label :address %>
+      <%= form.text_field :address, size: 40 %>
+    </a>
     <% else %>
-      <p>
+      <div>
         <a style="size: 100;">
           <%= form.label :address %>
           <%= form.text_field :address, size: 40%>
@@ -30,24 +36,25 @@
           <%= form.collection_select :mail_address_id, MailAddress.joins(:companies_person).where('companies_people.person_id =  ?', @email.person_id), :id,
               :email, prompt: 'Select Mail Address Company', size: 60%>
         </a>
-      </p>
+      </div>
     <% end %>
-    <p>
-      <%= form.label :message %>
+    <div>
+      <%= 'Message' %>
       <%= form.text_area :message, rows: 2, cols: 60, class: 'form-control' %>
-    </p>
-    <p>
-    Will be sent:
-    <%= date_field( :email, :will_send )%>
-    <% unless @email.sent_date.nil?  %>
-    <a style="margin: 5%;">Sent:
-      <%= date_field( :email, :sent_date ) %>
-    </a>
-    <% end %>
-  </p>
-  <p>
+    </div>
+    <div>
+      Will be sent:
+      <%= date_field( :email, :will_send )%>
+      <% unless @email.sent_date.nil?  %>
+      <a style="margin: 5%;">Sent:
+        <%= date_field( :email, :sent_date ) %>
+      </a>
+      <% end %>
+    </div>
+  <div>
     <%= 'Check It: '%>
     <%= form.check_box :checkit %>
     <a style="margin: 22%;"><%= form.submit %></a>
-  </p>
+  </div>
+
 <% end %>
