--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -4,6 +4,6 @@
   <%= link_to 'Back to all Holidays', holidays_path %>
 </p>
 <br>
- <%= render 'dates_holidays/list_dates_holidays', holiday: @holiday  %>
- <%= render 'companies_holidays/list_companies_holidays', holiday: @holiday  %>
+ <%#= render 'dates_holidays/list_dates_holidays', holiday: @holiday  %>
+ <%#= render 'companies_holidays/list_companies_holidays', holiday: @holiday  %>
 
