--- a/app/views/emails/edit.html.erb
+++ b/app/views/emails/edit.html.erb
@@ -5,19 +5,16 @@
   <%= link_to 'Back to all Emails', emails_path %>
 </p>
 <br>
-  <%= link_to 'Add New Post Card ', new_email_email_card_path(@email)  %>
-
+<%= link_to 'Add New Post Card ', new_email_email_card_path(@email, {holiday_id: @email.holiday_id}), class: "new-email-card",  id: "new-email_card"  %>
 <%#= render 'email_cards/header_email_cards_list', email: @email %>
-
 <!--
   <ol class="table-bordered">
     <%#= render @email.postcards if @email_cards.present? %>
   </ol>
  -->
-
 <div>
 <% if @email_cards.present? %>
-  <table class="table ">
+  <table class="table">
     <thead class="thead-light" align="center">
       <tr>
         <th> Post Card </th>
@@ -25,29 +22,27 @@
       </tr>
     </thead>
 
-  <tbody>
-    <% @email_cards.each do |email_card| %>
-    <tr>
-      <td>
-        <%= image_tag email_card.postcard.image.url(:small) %>
-        <%= email_card.postcard.filename %>
-      </td>
-      <td>
-        <%= email_card.postcard.holiday.name %>
-      </td>
-      <td>
-        <%= link_to 'edit', edit_email_card_path(email_card.id) %>
-      </td>
-      <td>
-        <%= link_to 'delete', email_card_path(email_card),
-                    method: :delete, data: { confirm: 'Are you sure' } %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-
+    <tbody>
+      <% @email_cards.each do |email_card| %>
+      <tr>
+        <td>
+          <%= image_tag email_card.postcard.image.url(:small) %>
+          <%= email_card.postcard.filename %>
+        </td>
+        <td>
+          <%= email_card.postcard.holiday.name %>
+        </td>
+        <td>
+          <%= link_to 'edit', edit_email_card_path(email_card.id, {holiday_id: @email.holiday_id, email_id: @email.id}), id: "edit-email-card" %>
+        </td>
+        <td>
+          <%= link_to 'delete', email_card_path(email_card),
+                      method: :delete, data: { confirm: 'Are you sure' } %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
   </table>
-
 <% else %>
   <p>
     <%= 'Empty list' %>
@@ -55,5 +50,3 @@
 <% end %>
 </div>
 <%#= render 'email_texts/list_email_texts', email: @email  %>
-
-
