--- a/app/views/holidays/_holiday.html.erb
+++ b/app/views/holidays/_holiday.html.erb
@@ -1,9 +1,4 @@
 <tr>
-<!--
-  <td >
-    <%#= holiday.id %>
-  </td>
- -->
   <td>
     <%= holiday.name %>
   </td>
@@ -13,6 +8,10 @@
   <td>
     <%= holiday.calc == 1 ? "YES" : '' %>
   </td>
+  <td>
+    <%= holiday.id %>
+  </td>
+
 <!--  <td class="s_e_d">-->
     <%#= link_to 'show', holiday_path(holiday) %>
 <!--  </td>-->
