Unfinished alteration crete Emails

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -21,20 +21,22 @@
       <%= form.text_field :subject, size: 60 %>
     </div>
     <% if @email.sent_date.present? %>
-    <a style="size: 100; margin: 10%">
-      <%= form.label :address %>
-      <%= form.text_field :address, size: 40 %>
-    </a>
+      <a style="size: 100; margin: 10%">
+        <%= form.label :address %>
+        <%#= form.text_field :address, size: 100 %>
+        <%= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
+      </a>
     <% else %>
       <div>
         <a style="size: 100;">
           <%= form.label :address %>
-          <%= form.text_field :address, size: 40%>
+          <%#= form.text_field :address, size: 60,  %>
+          <%= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
         </a>
         <a style="size: 100;  margin: 10%">
           <%= 'Company Email Address: ' %>
           <%= form.collection_select :mail_address_id, MailAddress.joins(:companies_person).where('companies_people.person_id =  ?', @email.person_id), :id,
-              :email, prompt: 'Select Mail Address Company', size: 60%>
+              :email, prompt: 'Select Mail Address Company', size: 40 %>
         </a>
       </div>
     <% end %>
