Add new table mail_addresses_emails

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -8,6 +8,9 @@
   <td>
     <%= company.country.name %>
   </td>
+  <td>
+    <%= company.email %>
+  </td>
 <!--   <td>
     <%#= link_to 'show', company_path(company) %>
   </td>
