--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -7,7 +7,10 @@
     <%= 'Country: ' %>
     <%= form.collection_select :country_id, Country.all, :id, :name, prompt: 'Select Country' %>
   </p>
-
+  <p>
+    <%= form.label :email%>:
+    <%= form.text_field :email %>
+  </p>
   <br>
   <p> <%= form.submit %> </p>
 <% end %>
