--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -12,6 +12,7 @@
         <th> N rec</th>
         <th> Name </th>
         <th> Country </th>
+        <th> Email </th>
       </tr>
     </thead>
     <%= render @companies %>
