--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,6 +7,10 @@
   Name:
   <%= @company.name %>
 </p>
+<p>
+  Email:
+  <%= @company.email %>
+</p>
 
 <%= link_to 'Edit company', edit_company_path(@company) %>
 
