add resourse mail_addresses_emails

--- a/app/views/emails/edit.html.erb
+++ b/app/views/emails/edit.html.erb
@@ -12,41 +12,66 @@
     <%#= render @email.postcards if @email_cards.present? %>
   </ol>
  -->
-<div>
-<% if @email_cards.present? %>
-  <table class="table">
-    <thead class="thead-light" align="center">
-      <tr>
-        <th> Post Card </th>
-        <th> Holiday </th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @email_cards.each do |email_card| %>
-      <tr>
-        <td>
-          <%= image_tag email_card.postcard.image.url(:small) %>
-          <%= email_card.postcard.filename %>
-        </td>
-        <td>
-          <%= email_card.postcard.holiday.name %>
-        </td>
-        <td>
-          <%= link_to 'edit', edit_email_card_path(email_card.id, {holiday_id: @email.holiday_id, email_id: @email.id}), id: "edit-email-card" %>
-        </td>
-        <td>
-          <%= link_to 'delete', email_card_path(email_card),
-                      method: :delete, data: { confirm: 'Are you sure' } %>
-        </td>
-      </tr>
+ <table>
+  <tbody>
+    <tr>
+      <div>
+      <% if @email_cards.present? %>
+        <table class="table">
+          <thead class="thead-light" align="center">
+            <tr>
+              <th> Post Card </th>
+              <th> Holiday </th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @email_cards.each do |email_card| %>
+            <tr>
+              <td>
+                <%= image_tag email_card.postcard.image.url(:small) %>
+                <%= email_card.postcard.filename %>
+              </td>
+              <td>
+                <%= email_card.postcard.holiday.name %>
+              </td>
+              <td>
+                <%= link_to 'edit', edit_email_card_path(email_card.id, {holiday_id: @email.holiday_id, email_id: @email.id}), id: "edit-email-card" %>
+              </td>
+              <td>
+                <%= link_to 'delete', email_card_path(email_card),
+                            method: :delete, data: { confirm: 'Are you sure' } %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <p>
+          <%= 'Empty list' %>
+        </p>
       <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <p>
-    <%= 'Empty list' %>
-  </p>
-<% end %>
-</div>
+      </div>
+    </tr>
+    <tr>
+      <table class="table" id="addresses">
+        <thead>
+          <tr>
+            <th>Company</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </tr>
+  </tbody>
+
+</table>
+
 <%#= render 'email_texts/list_email_texts', email: @email  %>
