--- a/app/views/countries_holidays/edit.html.erb
+++ b/app/views/countries_holidays/edit.html.erb
@@ -1,7 +1,7 @@
 <h1> Edit Country Holiday</h1>
   <%= render 'form' %>
 <p>
-  <%= link_to 'Back to all countries holiday', countries_holiday_path %>
+  <%= link_to 'Back to all countries holiday', countries_holidays_path %>
 </p><br>
 <!-- <p>
   <%#= link_to 'Back to all Holidays', holidays_path %>
