Rename model mail_addresses_emails to companies_email

--- a/app/views/emails/_email.html.erb
+++ b/app/views/emails/_email.html.erb
@@ -16,7 +16,7 @@
     <% if email.sent_date.present?  %>
     <%= email.address %>
     <% else %>
-    <%= text_area_tag(:text, "#{email.address}; \n #{email.mail_address.email}", size: :auto)  %>
+    <%= text_area_tag(:text, "#{email.address}", size: :auto)  %>
     <% end %>
   </td>
   <td>
