Repair create_emails

--- a/app/views/emails/_email.html.erb
+++ b/app/views/emails/_email.html.erb
@@ -3,7 +3,7 @@
     <%#= email.id %>
   </td>
  -->  <td >
-    <%= email.person.name %>
+    <%#= email.person.name %>
   </td>
   <td >
     <%= email.name %>
