--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -6,7 +6,7 @@
 
     <br>
 
-    TO: <a style="color: red; font-size: 20px" id="name"><%= " #{@email.person.name}" %></a>
+    <!-- TO: <a style="color: red; font-size: 20px" id="name"><%#= " #{@email.person.name}" %></a> -->
     <%#= form.collection_select :person_id, Person.all, :id, :name, prompt: 'Select person' %>
   </div>
     <a><%= 'HOLIDAY: ' %>
