--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -17,7 +17,6 @@
   to:
   <a style="background: navy; color: white;"><%= " #{Date.today + 30} " %></a>
 </li>
-
 <!-- <li class="nav-item active">
   <a style="color: navy">  Emails to date: </a>
   <%# my_date = Time.now + 6.days %>
@@ -38,17 +37,16 @@
     <table class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
-          <!-- <th > N </th> -->
-          <th > Person </th>
-          <th > Description </th>
-          <th > Subject </th>
-          <th > Mail Address </th>
-          <th > Holiday </th>
-          <th > Message </th>
-          <th > Postcards </th>
-          <th > Will be Send </th>
-          <th > Sent  </th>
-          <th > YEAR  </th>
+          <th> N </th>
+          <th> Description </th>
+          <th> Subject </th>
+          <th> Companies </th>
+          <th> Holiday </th>
+          <th> Message </th>
+          <th> Postcards </th>
+          <th> Will be Send </th>
+          <th> Sent  </th>
+          <th> YEAR  </th>
         </tr>
       </thead>
       <%= render @emails %>
