--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -5,58 +5,57 @@
     <a style="margin: 1%"> id: </a> <a style="color: navy"><%= "#{@email.id}" %></a>
 
     <br>
-
-    <!-- TO: <a style="color: red; font-size: 20px" id="name"><%#= " #{@email.person.name}" %></a> -->
-    <%#= form.collection_select :person_id, Person.all, :id, :name, prompt: 'Select person' %>
   </div>
-    <a><%= 'HOLIDAY: ' %>
-      <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
-    </a>
-    <div>
+  <a>
+    <%= 'HOLIDAY: ' %>
+    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+  </a>
+  <div>
     <%= 'Description: ' %>
     <%= form.text_field :name, size: 60 %>
-    </div>
+  </div>
+  <div>
+    <%= 'Subject: '  %>
+    <%= form.text_field :subject, size: 60 %>
+  </div>
+<!--   <% if @email.sent_date.present? %>
+    <a style="size: 100; margin: 10%">
+      <%#= form.label :address %>
+      <%#= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
+    </a>
+  <% else %>
     <div>
-      <%= 'Subject: '  %>
-      <%= form.text_field :subject, size: 60 %>
-    </div>
-    <% if @email.sent_date.present? %>
-      <a style="size: 100; margin: 10%">
-        <%= form.label :address %>
-        <%#= form.text_field :address, size: 100 %>
-        <%= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
+      <a style="size: 100;">
+        <%#= form.label :address %>
+        <%#= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
       </a>
-    <% else %>
-      <div>
-        <a style="size: 100;">
-          <%= form.label :address %>
-          <%#= form.text_field :address, size: 60,  %>
-          <%= form.text_area :address, rows: 1, cols: 100,  class: 'form-control'  %>
-        </a>
-<!--         <a style="size: 100;  margin: 10%">
-          <%#= 'Company Email Address: ' %>
-          <%#= form.collection_select :mail_address_id, MailAddress.joins(:companies_person).where('companies_people.person_id =  ?', @email.person_id), :id,
-              :email, prompt: 'Select Mail Address Company', size: 40 %>
-        </a>
+    </div>
+  <% end %>
  -->
-      </div>
+  <div>
+    <%= 'Message' %>
+    <%= form.text_area :message, rows: 2, cols: 60, class: 'form-control' %>
+  </div>
+  <div>
+    Will be sent:
+    <%= date_field( :email, :will_send )%>
+    <% unless @email.sent_date.nil?  %>
+    <a style="margin: 5%;">Sent:
+      <%= date_field( :email, :sent_date ) %>
+    </a>
     <% end %>
-    <div>
-      <%= 'Message' %>
-      <%= form.text_area :message, rows: 2, cols: 60, class: 'form-control' %>
-    </div>
-    <div>
-      Will be sent:
-      <%= date_field( :email, :will_send )%>
-      <% unless @email.sent_date.nil?  %>
-      <a style="margin: 5%;">Sent:
-        <%= date_field( :email, :sent_date ) %>
-      </a>
-      <% end %>
-    </div>
+  </div>
   <div>
     <%= 'Check It: '%>
     <%= form.check_box :checkit %>
-    <a style="margin: 22%;"><%= form.submit %></a>
+
   </div>
+  <div>
+    Email recipients:
+  </div>
+  <div>
+     <%= text_area_tag(:text, list_companies(@email), size: :auto) %>
+  </div>
+  <a style="margin: 22%;"><%= form.submit %></a>
+
 <% end %>
