Return field person_id to emails table

--- a/app/views/emails/_email.html.erb
+++ b/app/views/emails/_email.html.erb
@@ -39,7 +39,7 @@
   <td align="center">
     <%= email.year %>
   </td>
-    <% if  email.checkit > 0 %>
+    <% if  email.checkit.to_i > 0 %>
   <td class="s_e_d">
       <% if email.sent_date.to_i.zero? %>
         <%= link_to 'SEND', "/emails/send/#{email.id}" %>
