Repair companies_holidays/new

--- a/app/views/companies_holidays/new.html.erb
+++ b/app/views/companies_holidays/new.html.erb
@@ -2,6 +2,7 @@
   <%= render 'form' %>
 <br>
 <p>
-  <%= link_to 'Back to Holiday', edit_holiday_path(@companies_holiday.holiday) %>
+  <%#= link_to 'Back to Holiday', edit_holiday_path(@companies_holiday.holiday) %>
+  <%= link_to 'Back to Companies - Holidays', companies_holidays_path %>
 </p>
 
