Repair send_emails.rake

--- a/app/views/countries_holidays/new.html.erb
+++ b/app/views/countries_holidays/new.html.erb
@@ -2,6 +2,6 @@
   <%= render 'form' %>
 <br>
 <p>
-  <%= link_to 'Back to all Countries holidays', holiday_countries_holidays_path(@countries_holiday.holiday_id) %>
+ <%#= link_to 'Back to all Countries holidays', holiday_countries_holidays_path(@countries_holiday.holiday_id) %>
+ <%= link_to 'Back to all Countries holidays', countries_holidays_path %>
 </p>
-
