--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_with model: @company, local: true do |form| %>
   <p>
     <%= form.label :name %>:
-    <%= form.text_field :name %>
+    <%= form.text_field :name, size: 100 %>
   </p>
   <p>
     <%= 'Country: ' %>
-    <%= form.collection_select :country_id, Country.all, :id, :name, prompt: 'Select Country' %>
+    <a><%= form.collection_select :country_id, Country.all, :id, :name, {prompt: 'Select Country'} %><a>
   </p>
   <p>
     <%= form.label :email%>:
-    <%= form.text_field :email %>
+    <a> <%= form.text_field :email, size: 100 %></a>
   </p>
   <br>
   <p> <%= form.submit %> </p>
