--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -15,7 +15,7 @@
   <a style="background: navy; color: aqua;" ><%= link_to " CREATE EMAILS for 30 days: " , "/emails/create_emails" %></a>
   <a style="background: navy; color: white;"><%= "#{Date.today}" %></a>
   to:
-  <a style="background: navy; color: white;"><%= " #{Date.today + 30} " %></a>
+  <a style="background: navy; color: white;"><%= " #{Date.today + 15} " %></a>
 </li>
 <!-- <li class="nav-item active">
   <a style="color: navy">  Emails to date: </a>
@@ -40,7 +40,7 @@
           <th> N </th>
           <th> Description </th>
           <th> Subject </th>
-          <th> Companies </th>
+          <th> Companies / <br> Email address</th>
           <th> Holiday </th>
           <th> Message </th>
           <th> Postcards </th>
