--- a/app/views/countries_holidays/_form.html.erb
+++ b/app/views/countries_holidays/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: @countries_holiday, local: true do |form| %>
   <p>
-    <%= 'Company: ' %>
-    <%= form.collection_select :country_id, Country.all, :id, :name, prompt: 'Select company' %>
+    <%= 'Country: ' %>
+    <%= form.collection_select :country_id, Country.all, :id, :name, prompt: 'Select country' %>
   </p>
   <p>
     <%= 'Holiday: ' %>
