Set order to index view

--- a/app/views/cardtexts/_form.html.erb
+++ b/app/views/cardtexts/_form.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <%= 'Holiday: ' %>
-  <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+  <%= form.collection_select :holiday_id, Holiday.order(:name), :id, :name, prompt: 'Select holiday' %>
 </p>
 <p>
   <%= "Short description" %><br>
