--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
   <a>
     <%= 'HOLIDAY: ' %>
-    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+    <%= form.collection_select :holiday_id, Holiday.order(:name), :id, :name, prompt: 'Select holiday' %>
   </a>
   <div>
     <%= 'Description: ' %>
