--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -5,7 +5,7 @@
   </p>
   <p>
     <%= 'Country: ' %>
-    <a><%= form.collection_select :country_id, Country.all, :id, :name, {prompt: 'Select Country'} %><a>
+    <a><%= form.collection_select :country_id, Country.order(:name), :id, :name, {prompt: 'Select Country'} %><a>
   </p>
   <p>
     <%= form.label :email%>:
