--- a/app/views/companies_emails/_form.html.erb
+++ b/app/views/companies_emails/_form.html.erb
@@ -2,12 +2,12 @@
   <p>
     <%= 'for This Email: ' %>
     <a style="color: white; font-weight: bold; font-size: 16px; background-color: navy">
-      <%= form.collection_select :email_id, Email.all, :id, :name %>
+      <%= form.collection_select :email_id, Email.order(:name), :id, :name %>
     </a>
   </p>
   <p>
     <%= 'TO Company: ' %>
-    <%= form.collection_select :company_id, Company.all, :id, :name %>
+    <%= form.collection_select :company_id, Company.order(:name), :id, :name %>
   </p>
   <p>
     <%= 'Comment:' %>
