--- a/app/views/companies_holidays/_form.html.erb
+++ b/app/views/companies_holidays/_form.html.erb
@@ -2,11 +2,11 @@
 <%= form_with model: @companies_holiday, local: true do |form| %>
   <p>
     <%= 'Company: ' %>
-    <%= form.collection_select :company_id, Company.all, :id, :name, prompt: 'Select company' %>
+    <%= form.collection_select :company_id, Company.order(:name), :id, :name, prompt: 'Select company' %>
   </p>
   <p>
     <%= 'Holiday: ' %>
-    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+    <%= form.collection_select :holiday_id, Holiday.order(:name), :id, :name, prompt: 'Select holiday' %>
   </p>
   <br>
   <%#= byebug %>
