--- a/app/views/countries_holidays/_form.html.erb
+++ b/app/views/countries_holidays/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model: @countries_holiday, local: true do |form| %>
   <p>
     <%= 'Country: ' %>
-    <%= form.collection_select :country_id, Country.all, :id, :name, prompt: 'Select country' %>
+    <%= form.collection_select :country_id, Country.order(:name), :id, :name, prompt: 'Select country' %>
   </p>
   <p>
     <%= 'Holiday: ' %>
-    <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+    <%= form.collection_select :holiday_id, Holiday.order(:name), :id, :name, prompt: 'Select holiday' %>
   </p>
   <br>
   <p> <%= form.submit %> </p>
