--- a/app/views/dates_holidays/_form.html.erb
+++ b/app/views/dates_holidays/_form.html.erb
@@ -4,7 +4,7 @@
 </p>
 <p>
   <%= 'Holiday: ' %>
-  <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
+  <%= form.collection_select :holiday_id, Holiday.order(:name), :id, :name, prompt: 'Select holiday' %>
 </p>
 
 <p>
