--- a/app/views/email_texts/_form.html.erb
+++ b/app/views/email_texts/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model: @email_texts, local: true do |form| %>
   <p>
     <%= 'Text: ' %>
-    <%= form.collection_select :cardtext_id, Cardtext.all, :id, :filename, prompt: 'Select cardtext' %>
+    <%= form.collection_select :cardtext_id, Cardtext.order(:filename), :id, :filename, prompt: 'Select cardtext' %>
   </p>
   <p>
     <%= 'Email: ' %>
-    <%= form.collection_select :email_id, Email.all, :id, :name, prompt: 'Select Email' %>
+    <%= form.collection_select :email_id, Email.order(:name), :id, :name, prompt: 'Select Email' %>
   </p>
   <br>
   <p> <%= form.submit %> </p>
