--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -12,10 +12,10 @@
  </li>
  -->
  <li class="nav-item active">
-  <a style="background: navy; color: aqua;" ><%= link_to " CREATE EMAILS for 30 days: " , "/emails/create_emails" %></a>
+  <a style="background: navy; color: aqua;" ><%= link_to " CREATE EMAILS for #{$Period} days: " , "/emails/create_emails" %></a>
   <a style="background: navy; color: white;"><%= "#{Date.today}" %></a>
   to:
-  <a style="background: navy; color: white;"><%= " #{Date.today + 15} " %></a>
+  <a style="background: navy; color: white;"><%= " #{Date.today + $Period} " %></a>
 </li>
 <!-- <li class="nav-item active">
   <a style="color: navy">  Emails to date: </a>
