--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -34,7 +34,7 @@
  -->
 <table class="container">
   <% if @emails.present? %>
-    <table class="table table-bordered">
+    <table style="font-size: 12px"  class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
           <th> N </th>
