--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <%= link_to 'New Person', new_person_path %>
   <% if @people.present? %>
-    <table class="table table-bordered">
+    <table style="font-size: 12px" class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
           <th> Name </th>
