--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -8,10 +8,10 @@
     <table style="font-size: 12px" class="table table-bordered">
       <thead class="thead-light" align="center">
         <tr>
-          <th> Name </th>
+          <th> Name and Company </th>
           <th> Birthday </th>
           <th> Email </th>
-          <th> N rec</th>
+          <th> N rec </th>
         </tr>
       </thead>
       <%= render @people %>
