--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -16,8 +16,14 @@
     <%= form.text_field :name %>
   </p>
 
-
   <br>
+  <%= render "holidays_fields", f: :form %>
+
+ <!--
+    <%#= form.fields_for :holidays do |builder| %>
+    <%#= render "holidays_fields", :form => builder %>
+    <%# end %>
+ -->
   <p> <%= form.submit %> </p>
 <% end %>
 <br>
